Refactor transaction handling to use UUIDs, enhance CORS configuration to support PATCH method, and implement TransactionService for transaction updates. Update frontend to include TransactionsPage and TransactionTable components for improved transaction management.